# MeDUSA

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_ANALYSIS.md  AUTH_ENHANCEMENT_GUIDE.md  AWS_SES配置指南.md  CLOUD_DEPLOYMENT_SUCCESS.md  CONFIGURATION.md  DATA_FLOW_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  FIXES_SUMMARY.md  README.md  SECURITY-CHECKLIST.md  SECURITY_AUDIT.md  START.md  TREMOR_DATA_FIX_REPORT.md  docker-compose.educational.yml  docker-compose.insecure.yml  docker-compose.secure.yml  ✅密码强度增强已部署到生产环境.md  ✅生产模式已启用-Mock服务已移除.md  ✅真实邮件发送功能已部署.md  ✅部署完成-密码重置功能已上线.md  前后端功能对齐分析.md  启动说明.txt  密码强度增强实现说明.md  密码重置405错误修复.md  患者档案API实现完成.md  文档说明.md  核心功能实现计划-RBAC版.md  设备API测试通过.md  设备池动态绑定实现总结.md  设备管理API实现完成.md  🚀AWS_SES快速配置.md
backend/: .gitignore  .gitlab-ci.yml  README.md  configure-ses.ps1  deploy.ps1  samconfig.toml  template.yaml  test_device_api.ps1
doc_assets/: API_DOCUMENTATION.md  AWS_IOT_WEB_CONSOLE_SETUP (1).md  FDA_Premarket_Cybersecurity_Checklist.md  FIXES_SUMMARY.md  ISO14971_Risk_Assessment.md  MeDUSA_APP_Full_Test_Guide.docx  MeDUSA_Completion_Test.md  MeDUSA_标准版测试报告.md  PENTEST_PROGRESS.md  README.md  Reproducibility_Guide.md  SBOM.csv  SBOM_Documentation.md  Security_Implementation_Summary.md  Security_Traceability_Matrix.md  Testing_Guide.md  pentest_results.csv
docs/: Medical_Device_Universal_Security_Alignment__MeDUSA__Final_Paper (1).docx  paper_combined_expansion.md  paper_detailed_expansion.md  paper_replacements.md  paper_suggested_edits.md  repro_steps.md
frontend/: .env.example  .gitignore  README.md  pubspec.yaml  response_mag.json
lambda_functions/: README.md  add_doctor_endpoints.ps1  api_endpoint.txt  assign_patient_to_doctor.py  authorizer.py  batch_process_all_pi_data.py  check_device_data.py  cleanup_tables.py  cleanup_users.py  clear_all_tables.py  clear_analysis_table.py  debug_tables.py  deploy.ps1  deploy.sh  deploy_authorizer.ps1  deploy_complete.ps1  deploy_doctor_patient_mgmt.ps1  dynamodb_schema.md  (+45 more)
meddevice-backend-rust/: .env.example  .gitignore  Cargo.toml  README.md  SECURITY_ENHANCEMENT.md  deploy-simple.bat  deploy.bat  samconfig.toml  template-simple.yaml  template.yaml
meddevice-backend-rust/src/: config.rs  errors.rs  lib.rs  utils.rs
meddevice-backend-rust/src/handlers/auth/: main.rs
meddevice-backend-rust/src/models/: audit_log.rs  device.rs  mod.rs  patient.rs  report.rs  user.rs
meddevice-backend-rust/src/services/: audit.rs  auth.rs  crypto.rs  dynamodb.rs  mod.rs  s3.rs
meddevice-backend-rust/src/utils/: security.rs
(+265 files in other folders)
