[package]
name = "meddevice-backend"
version = "0.1.0"
edition = "2021"

# AWS Lambda functions
[[bin]]
name = "auth"
path = "src/handlers/auth/main.rs"

[[bin]]
name = "patients"
path = "src/handlers/patients/main.rs"

[[bin]]
name = "devices"
path = "src/handlers/devices/main.rs"

[[bin]]
name = "reports"
path = "src/handlers/reports/main.rs"

[[bin]]
name = "admin"
path = "src/handlers/admin/main.rs"

[dependencies]
# AWS Lambda runtime and utilities
lambda_runtime = "0.8"
lambda_http = "0.8"
lambda_web = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }

# AWS SDK
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication and security
jsonwebtoken = "9.0"
argon2 = "0.5"
base64 = "0.21"
rand = "0.8"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
